[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["django_middleware"]

[project]
name = "django-middleware"
description = "Reusable Django utilities for DE apps."
version = "5.2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=5.2"]

[project.urls]
Homepage = "https://github.com/DirectEmployers/django-middleware"
